[package]
name = "minions"
version = "0.2.9"
authors = ["David Beck <david.beck.priv@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/dbeck/minions_rs"
description = "DISCONTINUED. This crate was renamed. The development of this code is under the acto-rs crate."
keywords = ["actor", "concurrency"]
readme = "README.md"
homepage = "https://github.com/dbeck/minions_rs"
#documentation = "..."

[dependencies]
lossyq = "0.1.16"
parking_lot = "0.2"
time = "0.1"
libc = "0.2"

[profile.release]
debug = true
