[package]
name = "acto-rs"
version = "0.5.2"
authors = ["David Beck <david.beck.priv@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/dbeck/acto-rs"
description = "Experimental actor library."
keywords = ["actor", "concurrency"]
readme = "README.md"
homepage = "https://github.com/dbeck/acto-rs"
#documentation = "..."
autobins = false

[dependencies]
lossyq = "0.1.19"
libc = "0.2"

# [profile.release]
# debug = true

[features]
default = []
bench = []
printstats = []
experiment = []

[[bin]]
doc = false
name = "bench_200ms"
test = false
doctest = false

[[bin]]
doc = false
name = "just_wait_and_exit"
test = false
doctest = false
